src/test/ui/lifetime-before-type-params.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/lifetime-before-type-params.rs:2:13
   |
LL | fn first<T, 'a, 'b>() {}
   |         ----^^--^^- help: reorder the parameters: lifetimes, then types: `<'a, 'b, T>`

error: lifetime parameters must be declared prior to type parameters
  --> $DIR/lifetime-before-type-params.rs:4:18
   |
LL | fn second<'a, T, 'b>() {}
   |          --------^^- help: reorder the parameters: lifetimes, then types: `<'a, 'b, T>`

error: lifetime parameters must be declared prior to type parameters
  --> $DIR/lifetime-before-type-params.rs:6:16
   |
LL | fn third<T, U, 'a>() {}
   |         -------^^- help: reorder the parameters: lifetimes, then types: `<'a, T, U>`

error: lifetime parameters must be declared prior to type parameters
  --> $DIR/lifetime-before-type-params.rs:8:18
   |
LL | fn fourth<'a, T, 'b, U, 'c, V>() {}
   |          --------^^-----^^---- help: reorder the parameters: lifetimes, then types: `<'a, 'b, 'c, T, U, V>`

error[E0601]: `main` function not found in crate `lifetime_before_type_params`
   |
   = note: consider adding a `main` function to `$DIR/lifetime-before-type-params.rs`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0601`.
